fixed broken css

--- a/style.sass
+++ b/style.sass
@@ -882,15 +882,3 @@ a
 
 	p
 		font-size: 12px
-
-
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)
-
-	.hero-image
-		background:
-			image: url('./images/socialmediapic1-01.png')
-		width: 100%
-		height: auto
-		position: fixed
